Updated authentication check / frontend templates